# fauxmoLINUX

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
async-sockets-cpp/async-sockets/include/: udpserver.hpp
src/: fauxmoLINUX.cpp  fauxmoLINUX.h  remote_control.cpp  remote_control.h  templates.h  utils.h
